# Marketing-Assistant-AI-Agent

./: .gitignore  README.md  historical_campaign_performance_month.csv  historical_hourly_breakdown_month.csv  overview.md  pyproject.toml  requirements.txt  task.md
data/campaign_csvs/: active_campaign_performance_month.csv  active_hourly_breakdown_month.csv
docs/: architecture.md  output_schema.md
knowledge/: marketing_data_catalog.md
outputs/: analysis.json  report.md  summary.json
src/mktaiproject/: __init__.py  main.py  models.py
src/mktaiproject/analysis/: __init__.py  kpis.py
src/mktaiproject/chat/: __init__.py  bot.py
src/mktaiproject/llm/: __init__.py  ollama_client.py
src/mktaiproject/pipeline/: __init__.py  runner.py
src/mktaiproject/reporting/: __init__.py  storage.py  summary.py
src/mktaiproject/validation/: __init__.py  data_loader.py
tests/: test_pipeline_smoke.py
