[project]
name = "marketing-assistant-ai-agent"
version = "0.1.0"
description = "Python marketing assistant that validates campaign CSVs, computes KPIs, and optionally uses Ollama for summaries and Q&A"
authors = [{ name = "Yajat Mehta" }]
requires-python = ">=3.10,<3.14"
dependencies = []

[project.scripts]
mktaiproject = "mktaiproject.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mktaiproject"]
